--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,49 @@
     margin-bottom: var(--gap);
 }
 
+/* Classes de Learning */
+.grid-one-content{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    height: 100vh;
+    counter-reset: grid-counter;
+}
+
+.grid-main-heading{
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.grid-description{
+    padding-bottom: 5rem;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1.5fr);
+    gap: var(--gap);
+}
+
+.grid h3{
+    font-size: 3rem;
+    position: relative;
+    padding-left: 5rem;
+    padding-bottom: 3rem;
+}
+
+.grid h3::before{
+    counter-increment: grid-counter;
+    content: counter(grid-counter);
+    position: absolute;
+    font-style: italic;
+    font-size: 7rem;
+    top: -4rem;
+    left: -1rem;
+    transform: rotate(5deg);
+}
+
 /* Estilização Geral*/
 *{
     margin: 0;
