--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 }
 
 /* Classes*/
+
 .main-img{
     background-size: cover;
     background-position: center;
@@ -164,6 +165,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1.5fr);
     gap: var(--gap);
+    grid-auto-rows: 360px;
 }
 
 .grid h3{
@@ -182,6 +184,26 @@
     top: -4rem;
     left: -1rem;
     transform: rotate(5deg);
+}
+
+/* Classes Gallery */
+.grid-img{
+    transition: all 360ms ease-in-out;
+    overflow: hidden;
+}
+
+.grid-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.grid-img:hover{
+    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+}
+
+.grid-main-heading{
+    margin-bottom: 3rem;
 }
 
 /* Estilização Geral*/
