--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,10 +196,12 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    max-width: 340px;
+    max-height: 340px;
 }
 
 .grid-img:hover{
-    transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
+    transform: translate(-3%, 3%) scale(1.05) rotate(5deg);
 }
 
 .grid-main-heading{
