--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,3 +392,110 @@ textarea{
     margin: 0;
     padding: 5rem;
 }
+
+.close-menu{
+    display: none;
+    }
+
+.back-to-top{
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    background: var(--white-color);
+    width: 5rem;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color: var(--primary-color);
+    border: var(--primary-color) solid 1px;
+}
+
+@media (max-width:900px){
+
+    .intro-content{
+        grid-template-columns: 1fr;
+    }
+
+    .grid-img{
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .grid-img img{
+        width: 100%;
+        height: 100%;
+    }
+
+    .grid{
+        text-align: center;
+        display: block;
+
+    }
+
+    .form-grid{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--gap);
+    padding: 3rem;
+    border-radius: 5px;
+    }
+
+    .flex-input{
+    display: block;
+    }
+
+    .menu{
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+
+    .menu-content, .menu-content ul{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .menu-content{
+        height: 100vh;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    .close-menu-label::after{
+        content: "☰";
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background-color: var(--primary-color);
+        color: var(--white-color);
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        padding: 0.5rem;
+        cursor: pointer;
+    }
+
+    .close-menu:checked~.menu{
+        display: block;
+    }
+
+    .close-menu:checked~.close-menu-label::after{
+       content: "X";
+    }
+
+    .menu-spacing{
+        display: none;
+    }
+
+}
