--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,6 @@
 }
 
 .intro-text-content h2{
-    font-size: 5.5rem;
     margin-bottom: var(--gap);
     text-transform: uppercase;
     font-weight: 800;
@@ -420,6 +419,18 @@ textarea{
 }
 
 @media (max-width:1040px){
+
+    h2{
+        font-size: 2.8rem;
+    }
+
+    h3{
+        font-size: 2rem;
+    }
+
+    #contact h2{
+        font-size: 3rem;
+    }
 
     .intro-content{
         grid-template-columns: 1fr;
